feat: update info

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -29,6 +29,8 @@
   },
   "system": {
     "joined": "<user>{{username}}</user> joined the room.",
+    "left": "<user>{{username}}</user> left the room.",
+    "drawing": "<user>{{username}}</user> is drawing.",
     "guessed": "<user>{{username}}</user> guessed correctly! (+{{score}} points)",
     "roundEnd": "Round ended. The answer was \"{{word}}\".",
     "timeout": "Time's up. The answer was \"{{word}}\".",
@@ -146,5 +148,71 @@
     "cancel": "Cancel",
     "join": "Join",
     "confirm": "Confirm"
+  },
+  "static": {
+    "backHome": "Back to Home",
+    "contactUs": "Contact Us",
+    "privacy": "Privacy Policy",
+    "about": "About Us"
+  },
+  "privacy": {
+    "title": "Privacy Policy",
+    "lastUpdated": "Last updated: March 1, 2026",
+    "intro": "Scope",
+    "introText": "This policy applies to the DrawAndGuess web game, including room play, chat, drawing sync, sharing, and reference-image features. You can play without creating an account.",
+    "dataCollection": "Data We Process",
+    "dataCollectionText": "To keep the game working and stable, we process:",
+    "dataPoint1": "Basic info such as nickname, room ID, and language preference",
+    "dataPoint2": "Gameplay data such as strokes, chat messages, round scores, and room state",
+    "dataPoint3": "Technical data such as IP address, browser type, and access time",
+    "dataPoint4": "Traffic metrics such as page visits and basic usage events",
+    "dataUsage": "How We Use Data",
+    "dataUsageText": "We only use data for service operation and improvement:",
+    "dataUsagePoint1": "Run real-time multiplayer sessions and synchronize game state",
+    "dataUsagePoint2": "Troubleshoot issues, prevent abuse, and improve performance",
+    "dataUsagePoint3": "Understand feature usage and prioritize product iteration",
+    "cookies": "Cookies",
+    "cookiesText": "We use browser storage (for example, to remember language preference) and may use analytics-related cookies to measure site usage.",
+    "thirdParty": "Third-Party Services",
+    "thirdPartyText": "Some features rely on external services:",
+    "thirdPartyPoint1": "Google Analytics: site traffic and basic behavior analytics (if enabled)",
+    "thirdPartyPoint2": "DeepSeek API: trending word generation on the server side",
+    "thirdPartyPoint3": "Image search proxy: AI reference image display",
+    "retention": "Data Retention",
+    "retentionText": "Real-time room data is primarily stored in server memory and is cleared when a room becomes empty. It is also reset on server restart. Analytics data may be retained for operations analysis.",
+    "rights": "Your Choices and Rights",
+    "rightsText": "You can stop using the service at any time by leaving the page. If you want to request access, update, or deletion of relevant data, please contact us via the Contact page.",
+    "contact": "Contact Us",
+    "contactText": "If you have any questions about this Privacy Policy, please"
+  },
+  "about": {
+    "title": "About Us",
+    "mission": "What We Build",
+    "missionText": "DrawAndGuess is a lightweight real-time multiplayer drawing game designed for quick starts and instant social interaction.",
+    "story": "Current Product Scope",
+    "storyText": "The current version includes room creation/joining, real-time drawing sync, chat guessing, round scoring, room sharing, AI reference images, and bilingual support (English/Chinese).",
+    "team": "Our Product Principles",
+    "teamText": "We focus on mobile-first usability, low-latency synchronization, and clear game rules that are easy to learn.",
+    "roadmap": "What's Next",
+    "roadmapText": "We will continue improving gameplay stability, anti-abuse controls, internationalization, and live-ops features for global players."
+  },
+  "contact": {
+    "title": "Contact Us",
+    "intro": "You can reach us by email for bug reports, suggestions, or collaboration requests.",
+    "directTitle": "Direct Contact",
+    "directText": "Email:",
+    "responseTime": "We usually respond within 3 business days.",
+    "formTitle": "Quick Email Draft",
+    "name": "Name",
+    "namePlaceholder": "Your Name",
+    "email": "Email",
+    "emailPlaceholder": "your.email@example.com",
+    "subject": "Subject",
+    "subjectPlaceholder": "Example: Mobile drawing lag issue report",
+    "defaultSubject": "DrawAndGuess Feedback",
+    "message": "Message",
+    "messagePlaceholder": "How can we help you?",
+    "send": "Open Email App",
+    "notice": "Clicking the button opens your default email app with the message prefilled."
   }
 }
