--- a/client/src/locales/zh.json
+++ b/client/src/locales/zh.json
@@ -29,6 +29,8 @@
   },
   "system": {
     "joined": "<user>{{username}}</user> 加入了房间。",
+    "left": "<user>{{username}}</user> 离开了房间。",
+    "drawing": "<user>{{username}}</user> 正在画。",
     "guessed": "<user>{{username}}</user> 猜对了！(+{{score}} 分)",
     "roundEnd": "回合结束，答案是「{{word}}」。",
     "timeout": "时间到，答案是「{{word}}」。",
@@ -147,5 +149,71 @@
     "cancel": "取消",
     "join": "加入",
     "confirm": "确定"
+  },
+  "static": {
+    "backHome": "返回首页",
+    "contactUs": "联系我们",
+    "privacy": "隐私政策",
+    "about": "关于我们"
+  },
+  "privacy": {
+    "title": "隐私政策",
+    "lastUpdated": "最后更新：2026-03-01",
+    "intro": "适用范围",
+    "introText": "本政策适用于 DrawAndGuess 网页游戏（包含房间、聊天、绘画同步、分享和参考图功能）。我们不要求注册账号即可游玩。",
+    "dataCollection": "我们收集的数据",
+    "dataCollectionText": "为保障游戏可用性与稳定性，我们会处理以下数据：",
+    "dataPoint1": "玩家昵称、房间 ID、语言偏好等基础信息",
+    "dataPoint2": "游戏过程数据（绘画轨迹、聊天消息、回合得分与状态）",
+    "dataPoint3": "设备与网络技术信息（IP、浏览器类型、访问时间）",
+    "dataPoint4": "访问统计数据（如页面访问与基础使用事件）",
+    "dataUsage": "数据使用目的",
+    "dataUsageText": "我们仅在与产品运行相关的范围内使用数据：",
+    "dataUsagePoint1": "维持多人实时对战、同步画布和房间状态",
+    "dataUsagePoint2": "排查故障、预防滥用并优化性能",
+    "dataUsagePoint3": "分析功能使用情况，指导产品迭代",
+    "cookies": "Cookie 与本地存储",
+    "cookiesText": "我们会使用浏览器本地存储（例如保存语言偏好），并可能使用统计相关 Cookie 来衡量网站访问情况。",
+    "thirdParty": "第三方服务",
+    "thirdPartyText": "部分功能依赖第三方服务提供：",
+    "thirdPartyPoint1": "Google Analytics：用于统计页面访问与基础行为数据（若启用）",
+    "thirdPartyPoint2": "DeepSeek API：用于生成热点词条（服务端处理）",
+    "thirdPartyPoint3": "图片检索代理：用于展示 AI 参考图",
+    "retention": "数据保留",
+    "retentionText": "房间实时数据主要保存在服务端内存中，房间无人后会清理；服务器重启后相关实时数据也会重置。统计数据会按运营分析需要保留。",
+    "rights": "您的选择与权利",
+    "rightsText": "您可随时停止使用本服务并关闭页面。若您希望了解、更新或删除与您相关的数据，请通过“联系我们”页面与我们联系。",
+    "contact": "联系我们",
+    "contactText": "如果您对本隐私政策有任何疑问，请"
+  },
+  "about": {
+    "title": "关于我们",
+    "mission": "我们在做什么",
+    "missionText": "DrawAndGuess 是一款轻量、实时、多人互动的你画我猜网页游戏，目标是让玩家可以在 1 分钟内快速开局并享受即时互动。",
+    "story": "当前产品能力",
+    "storyText": "当前版本支持创建/加入房间、实时绘画同步、聊天猜词、回合计分、房间分享、AI 参考图与中英文切换。",
+    "team": "我们坚持的方向",
+    "teamText": "我们优先关注移动端体验、低延迟同步与简单可上手的规则设计，并持续优化稳定性与可玩性。",
+    "roadmap": "接下来",
+    "roadmapText": "我们会继续完善运营数据分析、反作弊能力、国际化体验和长期活动玩法，让游戏在全球场景下更稳定、更有趣。"
+  },
+  "contact": {
+    "title": "联系我们",
+    "intro": "你可以通过邮箱与我们联系，反馈问题、建议或合作需求。",
+    "directTitle": "直接联系",
+    "directText": "邮箱：",
+    "responseTime": "通常我们会在 3 个工作日内回复。",
+    "formTitle": "快速发送邮件草稿",
+    "name": "姓名",
+    "namePlaceholder": "您的姓名",
+    "email": "邮箱",
+    "emailPlaceholder": "your.email@example.com",
+    "subject": "主题",
+    "subjectPlaceholder": "例如：反馈一个移动端绘画卡顿问题",
+    "defaultSubject": "DrawAndGuess 用户反馈",
+    "message": "留言",
+    "messagePlaceholder": "我们要如何帮助您？",
+    "send": "打开邮件客户端",
+    "notice": "点击后会打开你的默认邮件客户端，并自动填入内容。"
   }
 }
